fix academics table styling on mobile

--- a/src/app/academics/academics.component.css
+++ b/src/app/academics/academics.component.css
@@ -22,4 +22,5 @@ table {
 
 .mat-column-courseCode {
     width: 20%;
+    padding-right: 12px;
 }
